--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@themesberg/react-bootstrap": "^1.4.1",
-    "bootstrap": "5.0.0-beta1",
+    "bootstrap": "^4.6.0",
     "chartist": "^0.10.1",
     "chartist-plugin-tooltips-updated": "^0.1.4",
     "moment-timezone": "^0.5.31",
@@ -57,7 +57,7 @@
     "react-router-hash-link": "^2.3.1",
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.1",
-    "sass": "^1.50.0",
+    "sass": "^1.91.0",
     "simplebar-react": "^2.3.0"
   },
   "eslintConfig": {
