--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@themesberg/volt-react-dashboard",
+  "homepage": "https://ratnanaveen.github.io/custom-react-dashboard/",
   "description": "Volt React Dashboard is a free and open source admin dashboard template powered by React.js and Bootstrap 5",
   "author": "Themesberg",
   "keywords": [
@@ -14,13 +15,12 @@
     "themesberg"
   ],
   "license": "MIT",
-  "homepage": "https://RatnaNaveen.github.io/custom-react-dashboard",
   "bugs": {
     "url": "https://github.com/themesberg/volt-react-dashboard/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/themesberg/volt-react-dashboard"
+    "url": "https://github.com/RatnaNaveen/custom-react-dashboard"
   },
   "version": "1.0.1",
   "scripts": {
@@ -74,5 +74,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
